<resources>
    <string name="app_name">Electro Movil</string>
    <string name="name">"Nombre "</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo Electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmacion">Confirme contraseña</string>
    <string name="registarse">Registarse</string>
    <string name="iniciar">Iniciar Sesion</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="refri">Refrigeradoras</string>
    <string name="action_favorite">Favorito</string>
    <string name="registro">Registrarse</string>
    <string name="logout">Cerrar Sesion</string>
    <string name="categorias">Seleccione una categoria</string>
    <string name="warning_message">Algo a salido mal, vuelve a intentarlo!</string>
    <string name="inicio_sesion">Inicio Sesion</string>
    <string name="Registro">Registro de Usuario</string>
    <string name="profile">Perfil de usuario</string>

</resources>
