<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/LoginToolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            app:elevation="0dp"
            android:textAlignment="center"
            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@color/white"
            tools:targetApi="lollipop" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inicio_sesion"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                android:textColor="#FFF"
                android:gravity=""/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="0dp"
        android:background="#0D0D0D"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_correo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:textColorHint="#FFFFFF"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextErrorMessages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleTint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_correo_sesion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"
                android:drawablePadding="12dp"
                android:hint="@string/correo"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:paddingBottom="20dp"
                android:textColor="#edf2f8"
                android:textColorHint="#FFFFFF"
                android:textSize="12sp"
                android:drawableLeft="@drawable/ic_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_contrasena"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:textColorHint="#FFFFFF"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/TextErrorMessages"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_correo"
            app:passwordToggleTint="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_contrasena_sesion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FFFFFF"
                android:drawablePadding="12dp"
                android:hint="@string/contrasena"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:paddingBottom="20dp"
                android:textColor="#edf2f8"
                android:textColorHint="#FFFFFF"
                android:textSize="12sp"
                android:drawableLeft="@drawable/ic_lock" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_shape"
            android:textColor="#fff"
            app:layout_constraintTop_toBottomOf="@id/layout_contrasena"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>





































